<resources>
    <string name="app_name">Calculadora</string>
    <string name="all_clear">AC</string>
    <string name="cero">0</string>
    <string name="clear">C</string>
    <string name="percentage">%</string>
    <string name="split">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="on_click_error">Ha ocurrido un error: </string>
    <string name="max_lenght">El limite de caracteres es de 20 digitos.</string>
    <string name="invalid_format">Formato invalido.</string>
</resources>
