<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="horizontal"
    android:columnCount="4"
    tools:context="com.sdq.android.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="end"
        android:maxLength="20"
        android:layout_rowWeight="2"
        android:hint="@string/cero"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="50sp"
        android:inputType="none"
        android:focusable="false"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btn_all_clear"
        android:text="@string/all_clear"
        android:layout_columnSpan="1"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_clear"
        android:text="@string/clear"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_percentage"
        android:text="@string/percentage"
        android:tag="@string/percentage"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_split"
        android:text="@string/split"
        android:tag="@string/split"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_seven"
        android:text="@string/seven"
        android:tag="@string/seven"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_eight"
        android:text="@string/eight"
        android:tag="@string/eight"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_nine"
        android:text="@string/nine"
        android:tag="@string/nine"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_multiply"
        android:text="@string/multiply"
        android:tag="@string/multiply"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_six"
        android:text="@string/six"
        android:tag="@string/six"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_five"
        android:text="@string/five"
        android:tag="@string/five"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_four"
        android:text="@string/four"
        android:tag="@string/four"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_minus"
        android:text="@string/minus"
        android:tag="@string/minus"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_one"
        android:text="@string/one"
        android:tag="@string/one"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_two"
        android:text="@string/two"
        android:tag="@string/two"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_three"
        android:text="@string/three"
        android:tag="@string/three"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_plus"
        android:text="@string/plus"
        android:tag="@string/plus"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_zero"
        android:text="@string/zero"
        android:tag="@string/zero"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_point"
        android:text="@string/point"
        android:tag="@string/point"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/list_background_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>

    <Button
        android:id="@+id/btn_equals"
        android:layout_columnSpan="2"
        android:text="@string/equals"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/btn_selector"
        android:layout_marginRight="1sp"
        android:layout_marginLeft="1sp"
        android:layout_marginTop="1sp"
        android:textColor="@color/colorWhite"
        android:textSize="28sp"/>
        android:background="@color/colorLighBlue"/>

</GridLayout>
